sqlite/conformance/sqlite-sqltests/snapshot_tests/schema/snapshots/schema__explain-begin-deferred-no-transaction-opcodes.snap
---
source: schema.sqltest
expression: BEGIN DEFERRED;
info:
  statement_type: OTHER
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode      p1  p2  p3  p4  p5  comment
   0  Init         0   1   0       0  Start at 1
   1  AutoCommit   0   0   0       0  auto_commit=false, rollback=false
   2  Halt         0   0   0       0
