sqlite/conformance/sqlite-sqltests/snapshot_tests/schema/snapshots/schema__explain-drop-temp-trigger-opens-temp-transaction.snap
---
source: schema.sqltest
expression: DROP TRIGGER temp.tr;
info:
  statement_type: DROP
  setup_blocks:
  - temp_trigger_for_drop
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4             p5  comment
   0  Init            0  14   0                  0  Start at 14
   1  OpenWrite       0   1   1                  0  root=1; iDb=1
   2  Rewind          0  11   0                  0  Rewind  sqlite_schema
   3    ColumnRange   0   0   1  2               0  r[1..2]=sqlite_schema.type..name
   4    String8       0   3   0  trigger         0  r[3]='trigger'
   5    Ne            1   3  10                  0  if r[1]!=r[3] goto 10
   6    String8       0   4   0  tr              0  r[4]='tr'
   7    Ne            2   4  10  NoCase          0  if r[2]!=r[4] goto 10
   8    Delete        0   0   0  sqlite_schema   0
   9    Goto          0  11   0                  0
  10  Next            0   3   0                  0
  11  SetCookie       1   1   3                  0
  12  DropTrigger     1   0   0  tr              0  DROP TRIGGER tr
  13  Halt            0   0   0                  0
  14  Transaction     0   2   0                  0  iDb=0 tx_mode=Write
  15  Transaction     1   2   2                  0  iDb=1 tx_mode=Write
  16  Goto            0   1   0                  0
